# Vivek_Singh

./: .gitignore
CNN/: CNN.ipynb  Untitled-1.py
CNN/.ipynb_checkpoints/: CNN-checkpoint.ipynb
CNN/image_Classifier.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
CNN/image_Classifier.model/variables/: variables.index
Clustering/: K_Means.ipynb  example.ipynb
Decision Tree/: DecisionTree.ipynb
FinalTask/: concept.py  final.py
Linear regresion/: idk.py  multiple_Linear_Rgression.ipynb  single.ipynb
Linear regresion/.ipynb_checkpoints/: idk-checkpoint.py  logistical-checkpoint.ipynb
Logistical Regression/: logistical.ipynb
NuralNetwork/: CNN.ipynb  CNN2.ipynb  CNN3.ipynb  values.txt  values2.txt  values3.txt
OpenCV/: ball_tracking.py
OpenCV/test/: HSV_calib.py  YUV_calib.py
ROS1/: CMakeLists.txt  package.xml
ROS1/src/: project_node.cpp
ROS2/: CMakeLists.txt
ROS2/src/: image_publisher.cpp  image_reader.cpp  map.yaml  map_image_loader.cpp
Regression/Linear regresion/: multiple_Linear_Rgression.ipynb
Regression/Linear regresion/.ipynb_checkpoints/: Example-checkpoint.ipynb  linear-checkpoint.py  single-checkpoint.ipynb
Regression/Logistical Regression/: logistical.ipynb
Regression/Logistical Regression/.ipynb_checkpoints/: logistical-checkpoint.ipynb
Regression/dino tim/: regression.ipynb
dino tim/: regression.ipynb
dino tim/.ipynb_checkpoints/: regression-checkpoint.ipynb
